Fix search bar and filters spacing on mobile

--- a/version_control/Codurance_September2020/css/modules/events-search-bar.css
+++ b/version_control/Codurance_September2020/css/modules/events-search-bar.css
@@ -8,9 +8,9 @@
   opacity: 0;
 }
 
-.hidden {
+/* .hidden {
   display: none;
-}
+} */
 
 .filters-wrapper {
   display: flex;
@@ -29,13 +29,12 @@
   .filters-wrapper {
     flex-direction: column;
     margin-bottom: 1em;
+    padding: 0;
   }
+
 {% endcall %}
 
 .events-search-bar {
-  --horizontal-padding-search-bar: 1em;
-  {{ utils.card_shadow_large() }}
-  
   border-radius: 0.3em;
   position: relative;
   width: 24rem;
@@ -45,7 +44,12 @@
 {% call utils.small_and_medium()%}
   .events-search-bar {
     width: 100%;
+  }   
+{% endcall %}
 
+{% call utils.small()%}
+  .events-search-bar {
+    padding-inline: 1em;
   }   
 {% endcall %}
 
@@ -60,8 +64,15 @@
 .events-search-bar::after, 
 .events-search-bar__reset-button {
   position: absolute;
-  right: var(--horizontal-padding-search-bar);
+  right: 1em;
 }
+
+{% call utils.small()%}
+  .events-search-bar::after, 
+  .events-search-bar__reset-button {
+    right: 2em;
+  }  
+{% endcall %}
 
 .events-search-bar::after, 
 .reset-button__icon {
@@ -78,8 +89,9 @@
 }
 
 .events-search-bar__input {
+  {{ utils.card_shadow_large()}}
   background-color: #fff;
-  padding-left: var(--horizontal-padding-search-bar);
+  padding-left: .8em;
   width: 100%;
   height: 2.5rem;
   border-radius: 0.3rem;
@@ -165,15 +177,19 @@
     }
 {% endcall %}
 
+.filter-dropdown-wrapper {
+    {{utils.card_shadow_large()}}
+}
+
 {% call utils.small() %}
     .filter-dropdown-wrapper {
       width: 100%;
+      {{utils.card_shadow()}}
     }
 {% endcall %}
 
 {% call utils.medium_large_and_extra_large()%}
     .filter-dropdown-wrapper {
-      {{ utils.card_shadow_large() }}
       border-radius: .3rem;
       align-items: center;
       height: 100%;
@@ -245,6 +261,7 @@
   flex-direction: column;
   padding: 10px;
 }
+
 
 .filter-dropdown-option:disabled{
     color: var(--french-gray);
